# mybot_v1

ev_r1/: CMakeLists.txt  CMakeLists.txt~  package.xml
ev_r1/include/ev_r1/: wheel.h  wheel.h~
ev_r1/launch/: create_connection.sh  create_connection.sh~  mybot_init.sh~  odometry_and_control.launch~  rviz_control.launch  rviz_control.launch~
ev_r1/src/: ev_r1.cpp  ev_r1.cpp~
ev_r1/urdf/: mybot.urdf  mybot.xacro  mybot_backup.urdf  mybot_backup.urdf~  mybot_laser_rotary.urdf
mybot-gazebo/: CMakeLists.txt  mybot_env.sdf  package.xml
mybot-gazebo/launch/: mybot_world.launch  mybot_world.launch~
mybot-gazebo/worlds/: mybot.world  mybot.world~
